--- a/src/components/TodoItem/TodoItem.css
+++ b/src/components/TodoItem/TodoItem.css
@@ -3,4 +3,21 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  background-color: #8758ff;
+  padding: 1rem 2rem;
+  border-radius: 0.5rem;
+  margin-top: 1rem;
+}
+
+.TodoItem p {
+
+  font-size: 1.2em;
+  font-weight: 600;
+}
+
+.todo-icons {
+  display: flex;
+  width: 3rem;
+  justify-content: space-between;
+  font-size: 20px;
 }
