--- a/src/components/TodoForm/TodoForm.css
+++ b/src/components/TodoForm/TodoForm.css
@@ -3,8 +3,12 @@
   outline: none;
   background: none;
   width: 400px;
-  color: #fff;
+  color: #8b8787;
   border: 1px solid #8758ff;
+  background-color: white;
+  border-radius: 4px;
+  margin-right: 1em;
+  margin-top: 1em;
 }
 
 .todo-btn {
